src/css/widget/_hang.scss
// Hang
.hang {
  @media (min-width: $breakpoint-full) {
    margin-right: $width-gap;
    position: absolute;
    right: 100%;
    width: $width-supplement;
    z-index: 1;
  }
}

.hang img {
  @media (min-width: $breakpoint-full) {
    width: 100%;
  }
}

h1.hang {
  @media (min-width: $breakpoint-full) {
    margin-top: 0;
  }
}

.section > h1.hang:first-child + * {
  @media (min-width: $breakpoint-full) {
    margin-top: $margin-top-section-heading;
  }
}

